Fix subsection mobile header and footer to be same height

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1406,7 +1406,7 @@ $icon-font-path: '../fonts/';
       position:fixed;
       bottom: 0px;
       width:100%;
-      height: 4rem;
+      height: 64px;
 
       background-color: #25383C;
 
